2005-12-06  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmem.h: Exempt GTK+ from the mem chunk deprecation, since
	we need GTK+ 2.8 to compile against GLib 2.10.

2005-12-05  Manish Singh  <yosh@gimp.org>

	* tests/run-collate-test.sh: set LC_COLLATE, not LANG, to be sure
	to override any user settings.

2005-12-05  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Revert an accidential commit

2005-12-05  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutf8.c: Documentation updates.  (#323291, Morten Welinder)

	* tests/Makefile.am (TESTS_ENVIRONMENT): 
	* tests/gobject/Makefile.am (TESTS_ENVIRONMENT): Set
	MALLOC_CHECK_ and MALLOC_PERTURB_

	* tests/run-collate-tests.sh: Run the collation tests explicitly 
	in en_US locale. (#320463)

	* glib/gmem.h: Really deprecate GMemChunk.

	* glib/gdate.c: 
	* glib/gutils.c: 
	* glib/gtree.c: 
	* glib/gstring.c: 
	* glib/giochannel.c: 
	* glib/gstrfuncs.c: Add versioned deprecation docs. 

2005-12-05  Martyn Russell  <martyn@imendio.com>

	* docs/reference/glib/glib-sections.txt:
	* glib/gasyncqueue.[ch]:
	- Added support for sorting async queues by with _push_sorted(),
	_push_sorted_unlocked(), _sort() and _sort_unlocked() (#323047).
	
	* tests/Makefile.am:
	* tests/asyncqueue-test.c:
	- Added test case for gasyncqueue.c

Mon Dec  5 15:53:20 2005  Tim Janik  <timj@imendio.com>

	* glib/gslice.c: implement chain walking for arbitrary ->next pointer
	offsets in g_slice_free_chain_with_offset() based on a patch by behdad
	in bug 323178. moved time consuming logic from g_slice_free() out of
	the inner loop, so g_slice_free_chain_with_offset() provides a real
	performance benefit over g_slice_free1() now.
	
	* glib/gslice.h: renamed g_slice_free_chain() to
	g_slice_free_chain_with_offset(). implemented g_slice_free_chain() as
	a type-safe macro as suggested in bug 323178.
	simplified the macro implementation of g_slice_free() and implemented
	it in a type safe manner for all compliers as suggested by Morten